<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_film">

    <ImageView
        android:id="@+id/hdsherina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/hdsherina"
        android:contentDescription="@string/image_description"/>

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="1800dp"
        android:layout_height="800dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/label_background"
        android:contentDescription="@string/image_description"/>

    <ImageView
        android:id="@+id/imgsherina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sherina"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/hdsherina"
        android:contentDescription="@string/image_description"/>
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hdsherina"
        android:text="@string/judulsher"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginStart="190dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <ImageView
        android:id="@+id/bintang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/bintang"
        android:layout_marginTop="65dp"
        android:layout_marginStart="190dp"
        android:contentDescription="@string/image_description"
        android:foregroundTint="#FFA235"/>

    <TextView
        android:id="@+id/jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bintang"
        android:text="@string/jam"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="190dp"
        android:contentDescription="@string/image_description"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jam"
        android:text="@string/lokasi"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="190dp"
        android:contentDescription="@string/image_description"
        android:textSize="16sp"/>
    <ImageView
        android:id="@+id/garis"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgsherina"
        android:background="@drawable/line"
        android:layout_marginTop="10dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/image_description"/>
    <TextView
        android:id="@+id/direc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/garis"
        android:text="@string/direc"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginTop="4dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_description"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/namadirec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/direc"
        android:text="@string/namadirec"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="14sp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_description"
        />
    <TextView
        android:id="@+id/crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/namadirec"
        android:text="@string/crew"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_description"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/namacrew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crew"
        android:text="@string/anggota"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="13sp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_description"/>
    <TextView
        android:id="@+id/syn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/namacrew"
        android:text="@string/syn"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginTop="4dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_description"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/deskrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/syn"
        android:text="@string/deskrip"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/image_description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/beli"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/deskrip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/beli"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinssemibold"
        android:background="@drawable/button_beli"/>
</RelativeLayout>